--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -127,10 +127,30 @@
     height: 70px;
 }
 
+.modal-header{
+    border: none;
+}
+
+.modal-footer{
+    border: none;
+}
+
+.modal-header .modal-title {
+    text-transform: capitalize;
+    color: white;
+}
+
+.modal-body img {
+    max-width: 100%;
+    height: 150px;
+}
+
 .modal-body .pokemonInfo {
     position: fixed;
-    left: 180px;
-    top: 100px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    left: 175px;
+    top: 40px;
     padding: 20;
     margin: 10;
     list-style: none;
@@ -138,18 +158,20 @@
 
 .modal-body  .pokemonInfo .type {
     color: #fff;
-    padding: .8rem 3rem;
-    margin: .25rem 0;
+    padding: .5rem 3rem;
+    margin: .50rem 0;
     font-size: .1;
-    border-radius: 1rem;
+    border-radius: 5rem;
     filter: brightness(1.1);
     text-align: center;
+    float: none;
 }
 
-
-.modal-body img {
-    max-width: 100%;
-    height: 150px;
+.modal-body  .status {
+    position: fixed;
+    left: 220px;
+    top: 95px;
+    color: #fff;
 }
 
 .pagination {
